--- a/scripts/package.json
+++ b/scripts/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "firebase": "^7.14.2"
+    "firebase": "^7.14.2",
+    "firebase-admin": "^8.11.0"
   }
 }
